# Backend

./: .gitignore  README.md  combine_files.sh  config.py  dirassati.py  pyproject.toml  pyrightconfig.json
app/: __init__.py  extensions.py  service.py
app/api/: __init__.py  decorators.py
app/api/absences/: controller.py  dto.py  service.py  utils.py
app/api/admin/: controller.py  dto.py  service.py  utils.py
app/api/admins/: controller.py  dto.py  service.py  utils.py
app/api/chats/: controller.py  dto.py  service.py  utils.py
app/api/fees/: controller.py  dto.py  service.py  utils.py
app/api/grades/: controller.py  dto.py  service.py  utils.py
app/api/groups/: __init__.py  controller.py  dto.py  service.py  utils.py
app/api/levels/: controller.py  (+3 more)
app/auth/: __init__.py  combined_output.txt  controller.py  dto.py  service.py  utils.py
app/models/: Absence.py  Admin.py  Chat.py  Fee.py  Group.py  Lesson.py  Level.py  Message.py  Module.py  Note.py  Notification.py  Parent.py  Salle.py  Schemas.py  Semester.py  Session.py  Student.py  Teacher.py  TeachingUnit.py  Teachings.py  TimeSlot.py  User.py  __init__.py  associations.py  combined_files.txt
madrassati/: __init__.py  config.py  controllers.py  errors.py  extensions.py  models.py  services.py  utils.py  views.py
migrations/versions/: 188de4c64020_.py  36b6e40eec2b_initial_migration.py  8a38e5a90c59_initial_migration.py
tests/api/: test_parent_controller.py  test_user_api.py
tests/models/: test_parent_model.py
tests/services/: test_parent_service.py
tests/utils/: test_parent_utils.py
(+59 files in other folders)
